# weekly66

./: .gitignore  README.md
devjava/: README.md  uploading.tgz
devjava/my-app/: pom.xml
devjava/spring-boot/: Dockerfile  pom.xml
devjava/spring-boot/src/main/java/com/example/springboot/: Application.java
devjava/spring-boot/src/test/java/com/example/springboot/: HelloControllerTest.java
devjava/upload/: Dockerfile  pom.xml
devjava/upload/src/main/java/com/example/demo/: AsyncConfig.java  FileAsyncUploadController.java  FileStorageManager.java  (+1 more)
devrust/simple01/: Cargo.toml
devrust/simple02/: Cargo.toml
devrust/simple02/src/: main.rs
devrust/simple02/tests/: web_test.rs
devrust/simple03/: Cargo.toml
devrust/simple03/src/: main.rs
devrust/simple04/: Cargo.toml
devrust/simple04/src/: main.rs
devrust/simple04/test/: test_one.rs
devrust/simple05/: Cargo.toml
devrust/simple05/src/: main.rs
devrust/simple06/cli/: Cargo.toml
devrust/simple06/cli/src/: main.rs
devrust/simple06/cli/src/error/: mod.rs
devrust/simple06/cli/src/web/: mod.rs  routes_login.rs  routes_tickets.rs
devrust/simple07/cli/: Dockerfile  Makefile  docker-compose.yml
devrust/simple07/cli/src/: main.rs
devrust/simple08/cli/: Dockerfile  docker-compose.yml  index.html
devrust/simple08/cli/src/: index.html
devrust/simple08/cli/src/error/: mod.rs
devrust/simple08/cli/src/model/: mod.rs
loadbalancer/: README.md  docker-compose.yml  nginx.conf
nginx/: docker-compose.yml  docker-compose2.yml
nginx/nginx/: nginx.conf
nginx/nginx2/: nginx.conf
veth/: README.md
(+1 files in other folders)
