[package]
name = "simple03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum  =  "0.6"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["full"] }
mime = "0.3"
serde_json = "1.0"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }